--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 <body>
     <header>
-        <img src="images/logo.png" alt="logo" class="logo" title="Logo">
+        <img src="Images/logo.png" alt="logo" class="logo" title="Logo">
         <nav>
             <div id="nav-tools">
-                <img src="images/configMixer.png" alt="Alterar lista" id="change-list">
+                <img src="Images/configMixer.png" alt="Alterar lista" id="change-list">
                 <img src="Images/light-theme.png" alt="Temas" id="change-theme">
             </div>
         </nav>
